@@ -92,6 +92,7 @@ Broker:
 - Default for max_queued_messages has been changed to 1000.
 - Add `ciphers_tls1.3` option, to allow setting TLS v1.3 ciphersuites.
   Closes #1825.
+- Report an error if the config file is set to a directory. Closes #1814.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
